--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
             --font-main: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        html, body { overflow-x: hidden; width: 100%; position: relative; }
         body { font-family: var(--font-main); line-height: 1.6; color: #333; }
         .container { max-width: 1200px; margin: 0 auto; padding: 0 20px; }
         header { background-color: var(--primary-color); color: white; padding: 20px 0; }
@@ -122,6 +121,7 @@
         </div>
     </header>
 
+    <!-- HERO -->
     <section class="hero" id="inicio">
         <div class="hero-content">
             <h1>Construimos tus sueños<br>desde los cimientos</h1>
@@ -131,17 +131,68 @@
         </div>
     </section>
 
-    <!-- Resto de secciones como las tenías (Nosotros, Servicios, Proyectos, Contacto, Footer) -->
-    
+    <!-- NOSOTROS -->
+    <section id="nosotros">
+        <div class="container">
+            <div class="section-title">
+                <h2>Nuestra Empresa</h2>
+                <p>Conoce más sobre nosotros y nuestro compromiso</p>
+            </div>
+            <div class="about-content">
+                <div class="about-text">
+                    <h3>Tradición familiar en construcción</h3>
+                    <p>Somos una empresa familiar dedicada a la construcción con años de experiencia en Olavarría y alrededores...</p>
+                </div>
+                <div class="about-image">
+                    <img src="img/equipo.jpg" alt="Equipo de trabajo">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- SERVICIOS -->
+    <section id="servicios" class="services">
+        <div class="container">
+            <div class="section-title">
+                <h2>Nuestros Servicios</h2>
+                <p>Soluciones integrales para tus proyectos</p>
+            </div>
+            <div class="services-grid">
+                <!-- tarjetas de servicios como ya las tenías -->
+            </div>
+        </div>
+    </section>
+
+    <!-- PROYECTOS -->
+    <section id="proyectos" class="portfolio">
+        <div class="container">
+            <div class="section-title">
+                <h2>Nuestros Proyectos</h2>
+                <p>Conoce algunos de nuestros trabajos</p>
+            </div>
+            <div class="portfolio-grid">
+                <!-- items de proyectos como ya los tenías -->
+            </div>
+        </div>
+    </section>
+
+    <!-- CONTACTO -->
+    <section id="contacto" class="contact">
+        <div class="container">
+            <div class="section-title">
+                <h2>Contacto</h2>
+                <p>¿Tienes un proyecto en mente? Contáctanos</p>
+            </div>
+            <div class="contact-content">
+                <!-- información y formulario como ya los tenías -->
+            </div>
+        </div>
+    </section>
+
     <footer>
         <div class="container">
             <p>&copy; 2025 Illescas Construcciones - Todos los derechos reservados</p>
             <p>Olavarría, Buenos Aires, Argentina</p>
-            <div class="social-links">
-                <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-whatsapp"></i></a>
-            </div>
         </div>
     </footer>
 
