--- a/presupuesto.html
+++ b/presupuesto.html
@@ -16,7 +16,6 @@
     button { margin-top:15px; width:100%; background:#e67e22; border:none; color:#fff; padding:12px; font-size:16px; border-radius:5px; cursor:pointer; }
     button:hover { background:#d35400; }
     .resultado { margin-top:20px; font-weight:bold; text-align:center; font-size:18px; }
-    .carrito h2 { margin-bottom:10px; }
     table { width:100%; border-collapse:collapse; margin-top:10px; }
     th, td { border:1px solid #ccc; padding:10px; text-align:center; }
     th { background:#2c3e50; color:white; }
@@ -24,6 +23,12 @@
     .btn-eliminar:hover { background:#b52a37; }
     .whatsapp { display:none; margin-top:20px; background:#25D366; color:#fff; text-align:center; padding:12px; border-radius:5px; font-weight:bold; text-decoration:none; }
     .whatsapp:hover { background:#20ba5b; }
+    .acciones-extra { margin-top:20px; text-align:center; }
+    .acciones-extra button, .acciones-extra a { display:inline-block; margin:5px; padding:12px 20px; border:none; border-radius:5px; font-size:16px; text-decoration:none; cursor:pointer; }
+    .btn-vaciar { background:#dc3545; color:white; }
+    .btn-vaciar:hover { background:#b52a37; }
+    .btn-inicio { background:#007bff; color:white; }
+    .btn-inicio:hover { background:#0056b3; }
   </style>
 </head>
 <body>
@@ -33,35 +38,28 @@
   </header>
 
   <div class="container">
-
     <!-- CALCULADORA -->
     <div class="calculadora">
       <label for="trabajo">Tipo de trabajo:</label>
       <select id="trabajo">
         <option value="zapata">Zapatas 1x1 (2 pisos) - $120.000 c/u</option>
         <option value="encadenado">Encadenado lineal - $25.000 ml</option>
-        <option value="columna">Columnas - $25.000 ml</option>
-        <option value="viga">Vigas sup. armada - $25.000 ml</option>
-        <option value="losa_vigueta">Losa viguetas - $50.000 m²</option>
-        <option value="capa_aisladora">Capa aisladora - $20.000 ml</option>
-        <option value="losa_hormigon">Losa hormigón - $80.000 m²</option>
-        <option value="techo_chapa">Techo chapa c/ machimbre - $50.000 m²</option>
         <option value="pared_comun">Pared ladrillo común - $25.000 m²</option>
-        <option value="ladrillo12">Pared ladrillo del 12 - $20.000 m²</option>
-        <option value="ladrillo8">Pared ladrillo del 8 - $12.000 m²</option>
-        <option value="revoque_int">Revoque interior - $20.000 m²</option>
-        <option value="revoque_ext">Revoque exterior - $30.000 m²</option>
-        <option value="coloc_puerta">Colocación de puerta - $120.000 c/u</option>
-        <option value="puerta_placa">Puerta de placa - $75.000 c/u</option>
-        <option value="ventana_std">Ventanas desde - $60.000 c/u</option>
-        <option value="ventana_grande">Ventanas 1.80x2.00 - $150.000 c/u</option>
-        <option value="pintura">Pintura látex - $10.000 m²</option>
-        <option value="enduido">Enduido por mano - $8.000 m²</option>
-        <option value="membrana_rollo">Membrana por rollo - $40.000 c/u</option>
-        <option value="membrana_liquida">Membrana líquida/pasta - $12.000 m²</option>
+        <option value="pared_hueco">Pared ladrillo hueco - $30.000 m²</option>
+        <option value="revoque_fino">Revoque fino - $15.000 m²</option>
+        <option value="revoque_grueso">Revoque grueso - $18.000 m²</option>
+        <option value="pintura_latex">Pintura látex - $10.000 m²</option>
+        <option value="pintura_sintetico">Pintura esmalte sintético - $12.000 m²</option>
+        <option value="piso_ceramico">Colocación piso cerámico - $20.000 m²</option>
+        <option value="piso_pvc">Colocación piso PVC - $15.000 m²</option>
+        <option value="revestimiento_plastico">Revestimiento plástico - $18.000 m²</option>
+        <option value="cielorraso_yeso">Cielorraso de yeso - $22.000 m²</option>
+        <option value="cielorraso_pvc">Cielorraso de PVC - $16.000 m²</option>
+        <option value="ventana">Ventana estándar - $60.000 c/u</option>
+        <option value="puerta">Puerta placa - $70.000 c/u</option>
       </select>
 
-      <label for="cantidad">Cantidad (m², ml o unidades):</label>
+      <label for="cantidad">Cantidad:</label>
       <input type="number" id="cantidad" placeholder="Ingrese cantidad" min="1">
 
       <button onclick="agregarAlCarrito()">Agregar al Presupuesto</button>
@@ -84,32 +82,32 @@
       </table>
       <div class="resultado" id="total">Total: $0</div>
       <a id="btnWhatsapp" href="#" target="_blank" class="whatsapp">Enviar Presupuesto por WhatsApp</a>
+
+      <!-- BOTONES EXTRA -->
+      <div class="acciones-extra">
+        <button class="btn-vaciar" onclick="vaciarCarrito()">Vaciar Carrito</button>
+        <a href="index.html" class="btn-inicio">Volver al Inicio</a>
+      </div>
     </div>
   </div>
 
   <script>
     const precios = {
-      zapata: { desc: "Zapatas", precio: 120000 },
+      zapata: { desc: "Zapatas 1x1 (2 pisos)", precio: 120000 },
       encadenado: { desc: "Encadenado lineal", precio: 25000 },
-      columna: { desc: "Columna", precio: 25000 },
-      viga: { desc: "Viga sup. armada", precio: 25000 },
-      losa_vigueta: { desc: "Losa viguetas", precio: 50000 },
-      capa_aisladora: { desc: "Capa aisladora", precio: 20000 },
-      losa_hormigon: { desc: "Losa de hormigón", precio: 80000 },
-      techo_chapa: { desc: "Techo chapa c/ machimbre", precio: 50000 },
       pared_comun: { desc: "Pared ladrillo común", precio: 25000 },
-      ladrillo12: { desc: "Pared ladrillo del 12", precio: 20000 },
-      ladrillo8: { desc: "Pared ladrillo del 8", precio: 12000 },
-      revoque_int: { desc: "Revoque interior", precio: 20000 },
-      revoque_ext: { desc: "Revoque exterior", precio: 30000 },
-      coloc_puerta: { desc: "Colocación de puerta", precio: 120000 },
-      puerta_placa: { desc: "Puerta de placa", precio: 75000 },
-      ventana_std: { desc: "Ventana estándar", precio: 60000 },
-      ventana_grande: { desc: "Ventana 1.80x2.00", precio: 150000 },
-      pintura: { desc: "Pintura látex", precio: 10000 },
-      enduido: { desc: "Enduido", precio: 8000 },
-      membrana_rollo: { desc: "Membrana por rollo", precio: 40000 },
-      membrana_liquida: { desc: "Membrana líquida/pasta", precio: 12000 },
+      pared_hueco: { desc: "Pared ladrillo hueco", precio: 30000 },
+      revoque_fino: { desc: "Revoque fino", precio: 15000 },
+      revoque_grueso: { desc: "Revoque grueso", precio: 18000 },
+      pintura_latex: { desc: "Pintura látex", precio: 10000 },
+      pintura_sintetico: { desc: "Pintura esmalte sintético", precio: 12000 },
+      piso_ceramico: { desc: "Colocación piso cerámico", precio: 20000 },
+      piso_pvc: { desc: "Colocación piso PVC", precio: 15000 },
+      revestimiento_plastico: { desc: "Revestimiento plástico", precio: 18000 },
+      cielorraso_yeso: { desc: "Cielorraso de yeso", precio: 22000 },
+      cielorraso_pvc: { desc: "Cielorraso de PVC", precio: 16000 },
+      ventana: { desc: "Ventana estándar", precio: 60000 },
+      puerta: { desc: "Puerta placa", precio: 70000 },
     };
 
     let carrito = [];
@@ -135,28 +133,32 @@
       actualizarCarrito();
     }
 
+    function vaciarCarrito() {
+      carrito = [];
+      actualizarCarrito();
+    }
+
     function actualizarCarrito() {
       let tbody = document.querySelector("#tablaCarrito tbody");
       tbody.innerHTML = "";
       let total = 0;
-      let mensaje = "Presupuesto solicitado:\n\n";
+      let mensaje = "Presupuesto solicitado:\\n\\n";
 
       carrito.forEach((item, index) => {
         total += item.subtotal;
-        mensaje += `${item.trabajo} - ${item.cantidad} x $${item.precio.toLocaleString("es-AR")} = $${item.subtotal.toLocaleString("es-AR")}\n`;
+        mensaje += `${item.trabajo} - ${item.cantidad} x $${item.precio.toLocaleString("es-AR")} = $${item.subtotal.toLocaleString("es-AR")}\\n`;
 
-        let fila = `<tr>
+        tbody.innerHTML += `<tr>
           <td>${item.trabajo}</td>
           <td>${item.cantidad}</td>
           <td>$${item.precio.toLocaleString("es-AR")}</td>
           <td>$${item.subtotal.toLocaleString("es-AR")}</td>
           <td><button class="btn-eliminar" onclick="eliminarItem(${index})">Eliminar</button></td>
         </tr>`;
-        tbody.innerHTML += fila;
       });
 
       document.getElementById("total").innerHTML = "Total: $" + total.toLocaleString("es-AR");
-      mensaje += `\nTOTAL: $${total.toLocaleString("es-AR")}`;
+      mensaje += `\\nTOTAL: $${total.toLocaleString("es-AR")}`;
 
       let btn = document.getElementById("btnWhatsapp");
       btn.href = "https://wa.me/542284586475?text=" + encodeURIComponent(mensaje);
